2010-08-18  Andy Buckley  <andy@insectnation.org>

	* Adding MC_GENERIC analysis. NB. Frank Siegert also added MC_HJETS.

2010-08-03  Andy Buckley  <andy@insectnation.org>

	* Fixing compare-histos treatment of what is now a ref file, and
	speeding things up... again. What a mess!

2010-08-02  Andy Buckley  <andy@insectnation.org>

	* Adding rivet-nopy: a super-simple Rivet C++ command line
	interface which avoids Python to make profiling and debugging
	easier.

	* Adding graceful exception handling to the AnalysisHandler event
	loop methods.

	* Changing compare-histos behaviour to always show plots for which
	there is at least one MC histo. The default behaviour should now
	be the correct one in 99% of use cases.

2010-07-30  Andy Buckley  <andy@insectnation.org>

	* Merging in a fix for shared_ptrs not being compared for
	insertion into a set based on raw pointer value.

2010-07-16  Andy Buckley  <andy@insectnation.org>

	* Adding an explicit library dependency declaration on libHepMC,
	and hence removing the -lHepMC from the rivet-config --libs
	output.

2010-07-14  Andy Buckley  <andy@insectnation.org>

	* Adding a manual section on use of Rivet (and AGILe) as
	libraries, and how to use the -config scripts to aid compilation.

	* FastJets projection now allows setting of a jet area definition,
	plus a hacky mapping for getting the area-enabled cluster
	sequence. Requested by Pavel Starovoitov & Paolo Francavilla.

	* Lots of script updates in last two weeks!

2010-06-30  Andy Buckley  <andy@insectnation.org>

	* Minimising amount of Log class mapped into SWIG.

	* Making Python ext build checks fail with error rather than
	warning if it has been requested (or, rather, not explicitly
	disabled).

2010-06-28  Andy Buckley  <andy@insectnation.org>

	* Converting rivet Python module to be a package, with the dlopen
	flag setting etc. done around the SWIG generated core wrapper
	module (rivet.rivetwrap).
